Fixed minor html rendering error in the heading of the notebook.

--- a/multiple_linear_reg_with_gradient_descent.ipynb
+++ b/multiple_linear_reg_with_gradient_descent.ipynb
@@ -4,9 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <u>Multiple Linear Regression with Gradient Descent</u>\n",
-    "\n",
-    "### Here I am trying to predict house prices using my implementation of vectorized gradient descent.<br>\n"
+    "<html>\n",
+    "    <body>\n",
+    "        <h1><u>Multiple Linear Regression with Gradient Descent</u></h1>\n",
+    "        <br>\n",
+    "        <h2>Here I am trying to predict house prices using my implementation of vectorized gradient descent.</h2>\n",
+    "        <br>\n",
+    "    </body>\n",
+    "</html>"
    ]
   },
   {
