--- a/multiple_linear_reg_with_gradient_descent.ipynb
+++ b/multiple_linear_reg_with_gradient_descent.ipynb
@@ -4,14 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<html>\n",
-    "    <body>\n",
-    "        <h1><u>Multiple Linear Regression with Gradient Descent</u></h1>\n",
-    "        <br>\n",
-    "        <h2>Here I am trying to predict house prices using my implementation of vectorized gradient descent.</h2>\n",
-    "        <br>\n",
-    "    </body>\n",
-    "</html>"
+    "<h1>Multiple Linear Regression with Gradient Descent</h1>\n",
+    "<br>\n",
+    "<h2>Here I am trying to predict house prices using my implementation of vectorized gradient descent.</h2>\n",
+    "<br>"
    ]
   },
   {
